Change default ScrollPane skin to Conscious Scroll Pane skin and add styles for new skin